Dial back logging on iOS
Remove mbed TLS server logs, remove all debug TS logs, make log level display properly in remote logger

Rework multipeer replicator status in Android

Only react to what we get from the status updates.  Remove STOPPED after sending it once so that disconnected peers don't cause false detection in tests.

Bump to Java 11 compatibility mode since Java 8 is deprecated.

Implement merge-dict resolver in Android

Fix bug in Android getMultipeerReplStatus

PeerID is not directly serializable, needs to be converted to string first

Adjust for 3.3.0-53 API changes

Create a multipeer dev_e2e pipeline (#240)

* Make a proper name for anonymous certificates

Otherwise there is a needless bottleneck in dns-sd trying to de-duplicate everything.  Now it will be "Test Server #"

The algorithm for calculating the folder name in http logs was wildly incorrect, and so every 100 logs would roll over to the same log files.  Also the test server was using iOS 16 specific API.

Remove no longer accurate or needed dev e2e test

* Add a Jenkins pipeline for dev functional testing

* Tweak Android display to force IPv4 address

* Remove replicator status of the disconnected peers (#236)

Remove replicator status of the disconnected peers so their replicator status will not be included next time.

* Rework multipeer replicator status in Android

Only react to what we get from the status updates.  Remove STOPPED after sending it once so that disconnected peers don't cause false detection in tests.

Bump to Java 11 compatibility mode since Java 8 is deprecated.

* Fix an error in http log folder naming

* Fix bug in Android getMultipeerReplStatus

PeerID is not directly serializable, needs to be converted to string first

* Adjust for 3.3.0-53 API changes

* Fix an issue saving iOS PID from multiple devices

Also mypy and ruff fixes

---------

Co-authored-by: Pasin Suriyentrakorn <pasin@couchbase.com>

CBL-7192: Don't reject a payload because of unknown keys (#241)
